Fix align end being unsupported

--- a/src/app/footer/footer.component.css
+++ b/src/app/footer/footer.component.css
@@ -8,7 +8,7 @@
 
 ::ng-deep app-footer {
     display: flex;
-    align-items: end;
+    align-items: flex-end;
     margin-top: 100px;
 
     /* background-color: green; */
